test/ill-formed/0080_union_in_struct_in_param.c
typedef struct {
  union {
    int x;
    double y;
  };
} s;

void f (struct s x) {}
